--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,47 +15,63 @@
 			<h2 class="text-center mb-5">Nos meilleures ventes</h2>
 			<!-- produit1 -->
 			<div class="col-lg-3 col-md-6 col-12">
-				<div class="card border-0">
-					<img src="{{ asset('assets/img/bonnet2.jpg')}}" class="card-img-top" alt="...">
-					<div class="card-body text-center">
-						<h5 class="card-title">Bonnet Artic</h5>
-						<p class="card-text">Some quick example text to build on the card title hover</p>
-						<span class="fs-4">58&euro;</span>
+				<a class="text-decoration-none text-dark" href="#">
+					<div class="card border-0">
+						<div class="overflow-hidden">
+							<img src="{{ asset('assets/img/bonnet2.jpg')}}" class="card-img-top img-best" alt="...">
+						</div>
+						<div class="card-body text-center">
+							<h5 class="card-title">Bonnet Artic</h5>
+							<p class="card-text">Some quick example text to build on the card title hover</p>
+							<span class="fs-4">58&euro;</span>
+						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 			<!-- produit 2 -->
 			<div class="col-lg-3 col-md-6 col-12">
-				<div class="card border-0">
-					<img src="{{ asset('assets/img/manteau1.jpg')}}" class="card-img-top" alt="...">
-					<div class="card-body text-center">
-						<h5 class="card-title">Veste Cintrée</h5>
-						<p class="card-text">Some quick example text to build on the card title hover</p>
-						<span class="fs-4">82&euro;</span>
+				<a class="text-decoration-none text-dark" href="#">
+					<div class="card border-0">
+						<div class="overflow-hidden">
+							<img src="{{ asset('assets/img/manteau1.jpg')}}" class="card-img-top img-best" alt="...">
+						</div>
+						<div class="card-body text-center">
+							<h5 class="card-title">Veste Cintrée</h5>
+							<p class="card-text">Some quick example text to build on the card title hover</p>
+							<span class="fs-4">82&euro;</span>
+						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 			<!-- produit 3 -->
 			<div class="col-lg-3 col-md-6 col-12">
-				<div class="card border-0">
-					<img src="{{ asset('assets/img/echarpe2.jpg')}}" class="card-img-top" alt="...">
-					<div class="card-body text-center">
-						<h5 class="card-title">Echarpe Livia</h5>
-						<p class="card-text">Some quick example text to build on the card title hover</p>
-						<span class="fs-4">39&euro;</span>
+				<a class="text-decoration-none text-dark" href="#">
+					<div class="card border-0">
+						<div class="overflow-hidden">
+							<img src="{{ asset('assets/img/echarpe2.jpg')}}" class="card-img-top img-best" alt="...">
+						</div>
+						<div class="card-body text-center">
+							<h5 class="card-title">Echarpe Livia</h5>
+							<p class="card-text">Some quick example text to build on the card title hover</p>
+							<span class="fs-4">39&euro;</span>
+						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 			<!-- produit 4 -->
 			<div class="col-lg-3 col-md-6 col-12">
-				<div class="card border-0">
-					<img src="{{ asset('assets/img/tshirt2.jpg')}}" class="card-img-top" alt="...">
-					<div class="card-body text-center">
-						<h5 class="card-title">T-shirt Manche</h5>
-						<p class="card-text">Some quick example text to build on the card title hover</p>
-						<span class="fs-4">12&euro;</span>
+				<a class="text-decoration-none text-dark" href="#">
+					<div class="card border-0">
+						<div class="overflow-hidden">
+							<img src="{{ asset('assets/img/tshirt2.jpg')}}" class="card-img-top img-best" alt="...">
+						</div>
+						<div class="card-body text-center">
+							<h5 class="card-title">T-shirt Manche</h5>
+							<p class="card-text">Some quick example text to build on the card title hover</p>
+							<span class="fs-4">12&euro;</span>
+						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 		</div>
 
@@ -89,7 +105,7 @@
 				</h2>
 				<p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting  prose here.</p>
 				<p class="mt-3 lead fst-italic">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore perspiciatis ab reiciendis consequatur mollitia, recusandae magni similique? Totam modi ducimus error amet odio velit, nihil, laboriosam qui, culpa voluptas dolorem.
-																			Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim laudantium ex laborum quia quae culpa aliquam deserunt nemo quo eaque. Consequuntur ipsa ullam in sapiente tenetur eaque aut amet quia?</p>
+																																																																					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim laudantium ex laborum quia quae culpa aliquam deserunt nemo quo eaque. Consequuntur ipsa ullam in sapiente tenetur eaque aut amet quia?</p>
 			</div>
 		</section>
 	</div>
