--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -63,7 +63,7 @@
 <!-- *****************navbar********************** -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top py-3 main-nav">
 	<div class="container">
-		<a class="navbar-brand" href="index.html">
+		<a class="navbar-brand" href="{{ path('app_home')}}">
 			<img src="{{ asset('assets/img/logo.png')}}" alt="">
 		</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,7 +73,7 @@
 			<div class="navbar-nav mx-lg-auto">
 				<ul class="list-unstyled d-lg-flex my-auto">
 					<li class="{{ _route == 'app_home' ? 'actif-nav-link' : '' }}">
-						<a class="nav-link {{ _route == 'app_home' ? 'actif' : '' }}" aria-current="page" href="index.html">Accueil</a>
+						<a class="nav-link {{ _route == 'app_home' ? 'actif' : '' }}" aria-current="page" href="{{ path('app_home')}}">Accueil</a>
 					</li>
 					<li>
 						<a class="nav-link" href="#">Boutique</a>
