Stylisation du formulaire d'inscription,mise en place des contraintes pour les différents champs et configuration du Mailer_DSN pour Mailhog

--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -79,7 +79,7 @@
 						<a class="nav-link" href="#">Boutique</a>
 					</li>
 					<li>
-						<a class="nav-link" href="#">A propos</a>
+						<a class="nav-link {{ _route == 'app_register' ? 'actif' : '' }}" href="{{ path('app_register')}}">Inscription</a>
 					</li>
 					<li>
 						<a class="nav-link" href="#">Contact</a>
