--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,21 +1,54 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Register
+{% endblock %}
 
 {% block body %}
-    {% for flash_error in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
+	<div class="container mt-5">
+		<div class="row">
 
-    <h1>Register</h1>
+			<div class="col-lg-6 offset-lg-3 my-5 border rounded p-5 bg-light">
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+				<h1 class="text-center mb-5">Créer un compte</h1>
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+				{% for flash_error in app.flashes('verify_email_error') %}
+					<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+				{% endfor %}
+
+
+				{{ form_start(registrationForm) }}
+
+				<div class="row">
+					<div class="col-lg-6">
+						{{ form_row(registrationForm.firstName,{
+					label:'Prénom'}) 
+					}}
+					</div>
+					<div class="col-lg-6">
+						{{ form_row(registrationForm.lastName,{
+					label:'Nom'}) 
+					}}
+					</div>
+				</div>
+
+				{{ form_row(registrationForm.email,{
+					label:'Adresse email'}) 
+				}}
+
+				{{ form_row(registrationForm.plainPassword, {
+                    label: 'Mot de passe'}) 
+				}}
+
+				{{ form_row(registrationForm.agreeTerms,{
+					label:'J\'accepte les termes et les conditions d\'utilisation'}) 
+				}}
+
+				<button type="submit" class="btn btn-primary fs-5 w-100 mt-5" formnovalidate>Créer</button>
+
+
+				{{ form_end(registrationForm) }}
+
+			</div>
+		</div>
+	</div>
 {% endblock %}
