--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -45,6 +45,9 @@
 
 				<button type="submit" class="btn btn-primary fs-5 w-100 mt-5" formnovalidate>Créer</button>
 
+				<p class="mt-5 text-center text-muted">Vous avez déjà un compte?
+					<a href="{{ path('app_login') }}">Se connecter</a>
+				</p>
 
 				{{ form_end(registrationForm) }}
 
