Changement du chemin des images

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,7 +19,7 @@
 				<a class="text-decoration-none text-dark" href="#">
 					<div class="card border-0">
 						<div class="overflow-hidden">
-							<img src="{{ asset('assets/img/bonnet2.jpg')}}" class="card-img-top img-best" alt="...">
+							<img src="{{ asset('build/img/bonnet2.jpg')}}" class="card-img-top img-best" alt="...">
 						</div>
 						<div class="card-body text-center">
 							<h5 class="card-title">Bonnet Artic</h5>
@@ -34,7 +34,7 @@
 				<a class="text-decoration-none text-dark" href="#">
 					<div class="card border-0">
 						<div class="overflow-hidden">
-							<img src="{{ asset('assets/img/manteau1.jpg')}}" class="card-img-top img-best" alt="...">
+							<img src="{{ asset('build/img/manteau1.jpg')}}" class="card-img-top img-best" alt="...">
 						</div>
 						<div class="card-body text-center">
 							<h5 class="card-title">Veste Cintrée</h5>
@@ -49,7 +49,7 @@
 				<a class="text-decoration-none text-dark" href="#">
 					<div class="card border-0">
 						<div class="overflow-hidden">
-							<img src="{{ asset('assets/img/echarpe2.jpg')}}" class="card-img-top img-best" alt="...">
+							<img src="{{ asset('build/img/echarpe2.jpg')}}" class="card-img-top img-best" alt="...">
 						</div>
 						<div class="card-body text-center">
 							<h5 class="card-title">Echarpe Livia</h5>
@@ -64,7 +64,7 @@
 				<a class="text-decoration-none text-dark" href="#">
 					<div class="card border-0">
 						<div class="overflow-hidden">
-							<img src="{{ asset('assets/img/tshirt2.jpg')}}" class="card-img-top img-best" alt="...">
+							<img src="{{ asset('build/img/tshirt2.jpg')}}" class="card-img-top img-best" alt="...">
 						</div>
 						<div class="card-body text-center">
 							<h5 class="card-title">T-shirt Manche</h5>
@@ -88,7 +88,7 @@
 				<p class="mt-3 lead fst-italic">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore temporibus, exercitationem fuga quam quia perspiciatis veniam ex, ullam omnis, ipsam accusamus veritatis voluptate blanditiis? Accusantium optio quisquam iure? Recusandae, perferendis? Dolor, repudiandae modi. Impedit accusantium minus porro. Quaerat, iusto? Error officiis, quod, cumque sed ex recusandae adipisci est repellat odit repellendus necessitatibus aspernatur, illo culpa ratione omnis beatae id! Doloribus.</p>
 			</div>
 			<div class="col-lg-5">
-				<img src="{{ asset('assets/img/rubrique1.jpg')}}" alt="" class="img-fluid">
+				<img src="{{ asset('build/img/rubrique1.jpg')}}" alt="" class="img-fluid">
 			</div>
 		</section>
 
@@ -98,7 +98,7 @@
 		<!-- Rubrique 2 -->
 		<section class="row pb-lg-5">
 			<div class="col-lg-5 mb-lg-0 mb-3">
-				<img src="{{ asset('assets/img/rubrique2.jpg')}}" alt="" class="img-fluid">
+				<img src="{{ asset('build/img/rubrique2.jpg')}}" alt="" class="img-fluid">
 			</div>
 			<div class="col-lg-7">
 				<h2>First featurette heading.
@@ -106,7 +106,7 @@
 				</h2>
 				<p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting  prose here.</p>
 				<p class="mt-3 lead fst-italic">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore perspiciatis ab reiciendis consequatur mollitia, recusandae magni similique? Totam modi ducimus error amet odio velit, nihil, laboriosam qui, culpa voluptas dolorem.
-																																							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim laudantium ex laborum quia quae culpa aliquam deserunt nemo quo eaque. Consequuntur ipsa ullam in sapiente tenetur eaque aut amet quia?</p>
+																																																																										Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim laudantium ex laborum quia quae culpa aliquam deserunt nemo quo eaque. Consequuntur ipsa ullam in sapiente tenetur eaque aut amet quia?</p>
 			</div>
 		</section>
 	</div>
@@ -117,7 +117,7 @@
 	<!-- *********************Transition ***************************** -->
 
 
-	<div class="container-fluid my-5 cut">
+	<div class="container-fluid my-5 cut" style="background-image: url({{ asset('build/img/cut.jpg') }});">
 		<div class="text-white txt-cut">
 			<h2 class="h1 pt-5">Nouvelle collection</h2>
 			<p class="fs-5 fst-italic">"Lorem ipsum dolor sit amet consectetur .<br>
@@ -134,16 +134,16 @@
 			<div class="col-lg-6 offset-lg-3 border-0">
 				<div id="owl-brands" class="owl-carousel owl-theme">
 					<div class="item item-brands">
-						<img src="{{ asset('assets/img/brand_01.png')}}" class="img-fluid w-100">
+						<img src="{{ asset('build/img/brand_01.png')}}" class="img-fluid w-100">
 					</div>
 					<div class="item item-brands">
-						<img src="{{ asset('assets/img/brand_02.png')}}" class="img-fluid w-100">
+						<img src="{{ asset('build/img/brand_02.png')}}" class="img-fluid w-100">
 					</div>
 					<div class="item item-brands">
-						<img src="{{ asset('assets/img/brand_03.png')}}" class="img-fluid w-100">
+						<img src="{{ asset('build/img/brand_03.png')}}" class="img-fluid w-100">
 					</div>
 					<div class="item item-brands">
-						<img src="{{ asset('assets/img/brand_04.png')}}" class="img-fluid w-100">
+						<img src="{{ asset('build/img/brand_04.png')}}" class="img-fluid w-100">
 					</div>
 				</div>
 			</div>
