--- a/templates/partials/_owlCarousel.html.twig
+++ b/templates/partials/_owlCarousel.html.twig
@@ -3,7 +3,7 @@
 <div id="owl-banners" class="owl-carousel owl-theme mb-5">
 
 	<div class="item item-banners">
-		<img src="{{ asset('assets/img/img1.jpg')}}" class="img-fluid">
+		<img src="{{ asset('build/img/img1.jpg')}}" class="img-fluid">
 		<div class="position-absolute text-white p-2" style="bottom:40%;left:10%">
 			<h2>Nouvelle Collection</h2>
 			<p class="fst-italic lead">Opsum dolor sit amet consectetur adipisicing</p>
@@ -11,7 +11,7 @@
 		</div>
 	</div>
 	<div class="item item-banners">
-		<img src="{{ asset('assets/img/img2.jpg')}}" class="img-fluid">
+		<img src="{{ asset('build/img/img2.jpg')}}" class="img-fluid">
 		<div class="position-absolute text-white p-2" style="bottom:40%;left:10%">
 			<h2>Nouvelle Collection</h2>
 			<p class="fst-italic lead">Opsum dolor sit amet consectetur adipisicing</p>
@@ -19,11 +19,11 @@
 		</div>
 	</div>
 	<!-- <div class="item item-banners">
-									<img src="img/hero-3.jpg" class="img-fluid">
-									<div class="position-absolute text-white p-2" style="bottom:40%;left:10%">
-								<h2>Nouvelle Collection</h2>
-								<p class="fst-italic lead">Opsum dolor sit amet consectetur adipisicing</p>
-								<button class="btn btn-primary text-uppercase">Découvrir</button>
-								</div>
-								</div> -->
+										<img src="img/hero-3.jpg" class="img-fluid">
+										<div class="position-absolute text-white p-2" style="bottom:40%;left:10%">
+									<h2>Nouvelle Collection</h2>
+									<p class="fst-italic lead">Opsum dolor sit amet consectetur adipisicing</p>
+									<button class="btn btn-primary text-uppercase">Découvrir</button>
+									</div>
+									</div> -->
 </div>
