--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -48,7 +48,7 @@
 						<a href="#" class="foot-links">A propos</a>
 					</li>
 					<li class="mb-2">
-						<a href="#" class="foot-links">Se connecter</a>
+						<a href="{{ path('app_login') }}" class="foot-links">Se connecter</a>
 					</li>
 				</ul>
 			</div>
