--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,9 +9,13 @@
 
 		<div class="row">
 
-			<div class="col-lg-6 offset-lg-3 my-5 border rounded p-5 bg-light">
+			<h1 class="text-center text-muted">Connexion</h1>
 
-				<h1 class="text-center mb-5">Se connecter</h1>
+			<div class="col-lg-6 offset-lg-3 mb-5 mt-3 border rounded p-5 bg-form">
+
+				<div class="d-flex mb-5">
+					<img src="{{ asset('build/img/login.png') }}" class="img-fluid m-auto" width="250">
+				</div>
 
 				<form method="post">
 					{% if error %}
@@ -29,21 +33,20 @@
 					<label for="inputEmail">Email</label>
 					<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
 
-					<label for="inputPassword">Password</label>
+					<label class="mt-3" for="inputPassword">Password</label>
 					<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
 					<input
 					type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
 					{#
-															Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-															See https://symfony.com/doc/current/security/remember_me.html
-															<div class="checkbox mb-3">
-															<label>
-															<input type="checkbox" name="_remember_me"> Remember me																													
-															</label>
-																</div>
-																				#}
+																																																																	Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+																																																																	See https://symfony.com/doc/current/security/remember_me.html
+																																																																	<div class="checkbox mb-3">
+																																																																	<label>
+																																																																	<input type="checkbox" name="_remember_me"> Remember me																												</label>
+																																																																	</div>
+																																																																	#}
 
 					<button class="btn btn-primary fs-5 w-100 mt-5" type="submit" formnovalidate>
 						Me connecter
