--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,8 +4,9 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container mt-5">
-		{% include "partials/_flash_message.html.twig" %}
+	<div
+		class="container mt-5">
+		{# {% include "partials/_flash_message.html.twig" %} #}
 
 		<div class="row">
 
@@ -40,13 +41,13 @@
 					type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
 					{#
-																																																																	Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-																																																																	See https://symfony.com/doc/current/security/remember_me.html
-																																																																	<div class="checkbox mb-3">
-																																																																	<label>
-																																																																	<input type="checkbox" name="_remember_me"> Remember me																												</label>
-																																																																	</div>
-																																																																	#}
+																																																																						Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+																																																																						See https://symfony.com/doc/current/security/remember_me.html
+																																																																						<div class="checkbox mb-3">
+																																																																						<label>
+																																																																						<input type="checkbox" name="_remember_me"> Remember me																												</label>
+																																																																						</div>
+																																																																						#}
 
 					<button class="btn btn-primary fs-5 w-100 mt-5" type="submit" formnovalidate>
 						Me connecter
