--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -5,9 +5,15 @@
 
 {% block body %}
 	<div class="container mt-5">
-		<div class="row">
 
-			<h1 class="text-center text-muted">Inscription</h1>
+		<div class="row my-5">
+			<div class="col-12">
+				<h1 class="display-5">{{ title }}</h1>
+				<hr>
+			</div>
+		</div>
+
+		<div class="row px-lg-0 px-3">
 
 			<div class="col-lg-6 offset-lg-3 mb-5 mt-3 border rounded p-5 bg-form">
 
