--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -4,7 +4,7 @@
 	<div class="container py-5">
 		<div class="row py-4">
 			<div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-				<img src="{{ asset('assets/img/logo.png')}}" alt="" width="180" class="mb-3">
+				<img src="{{ asset('build/img/logo.png')}}" alt="" width="180" class="mb-3">
 				<p class="font-italic text-white">
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
 				<ul class="list-inline mt-4 fs-4">
